--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,61 @@
-/*# sourceMappingURL=style.css.map */
+@charset "UTF-8";
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #FFE2B0;
+}
+
+header {
+  text-align: center;
+}
+header img {
+  margin-bottom: 20px;
+}
+header ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+header ul li:not(:last-child) {
+  margin-right: 100px;
+}
+header ul a {
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+}
+
+.section-about {
+  height: 40rem;
+  background: url(../img/01-Картинка-фона.jpg) center/cover no-repeat;
+  position: relative;
+}
+.section-about .section-about__block {
+  width: 26.25rem;
+  height: 11.875rem;
+  background: linear-gradient(180deg, rgba(244, 213, 178, 0.8) 0%, rgba(234, 156, 65, 0.8) 100%);
+  position: absolute;
+  top: 349px;
+  left: 730px;
+  padding-top: 15px;
+}
+.section-about .section-about__block .section-about__border {
+  width: 24.375rem;
+  height: 10rem;
+  border: 1px solid #000;
+  margin: 0 auto;
+  padding: 17px 0 0 28px;
+  text-align: left;
+}
+.section-about .section-about__block .section-about__border .section-about__title {
+  font-size: 36px;
+  margin-bottom: 9px;
+}
+.section-about .section-about__block .section-about__border .section-about__text {
+  font-size: 12px;
+}/*# sourceMappingURL=style.css.map */
