--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,6 +34,7 @@ header ul a {
   height: 40rem;
   background: url(../img/01-Картинка-фона.jpg) center/cover no-repeat;
   position: relative;
+  margin-bottom: 20px;
 }
 .section-about .section-about__block {
   width: 26.25rem;
@@ -58,4 +59,25 @@ header ul a {
 }
 .section-about .section-about__block .section-about__border .section-about__text {
   font-size: 12px;
+}
+
+.section-description .section-description__container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.section-description .section-description__container img:not(:last-child) {
+  margin-right: 76px;
+}
+.section-description .section-description__text-container h1 {
+  font-size: 96px;
+  text-align: center;
+}
+.section-description .section-description__text-container span {
+  color: #f15b40;
+}
+.section-description .section-description__text-container p {
+  text-align: center;
+  font-size: 18px;
+  max-width: 62.5rem;
+  margin: 0 auto;
 }/*# sourceMappingURL=style.css.map */
