--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -33,6 +33,7 @@ header{
     height: 40rem;
     background: url(../img/01-Картинка-фона.jpg) center/cover no-repeat;
     position: relative;
+    margin-bottom: 20px;
     .section-about__block{
         width: 26.25rem;
         height: 11.875rem;
@@ -55,6 +56,31 @@ header{
             .section-about__text{
                 font-size: 12px;
             }
+        }
+    }
+}
+
+.section-description{
+    .section-description__container{
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .section-description__container img:not(:last-child){
+        margin-right: 76px;
+    }
+    .section-description__text-container{
+        h1{
+            font-size: 96px;
+            text-align: center;
+        }
+        span{
+            color: #f15b40;
+        }
+        p{
+            text-align: center;
+            font-size: 18px;
+            max-width: 62.5rem;
+            margin: 0 auto;
         }
     }
 }
