--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,6 +61,9 @@ header ul a {
   font-size: 12px;
 }
 
+.section-description {
+  margin-bottom: 20px;
+}
 .section-description .section-description__container {
   text-align: center;
   margin-bottom: 20px;
@@ -80,4 +83,36 @@ header ul a {
   font-size: 18px;
   max-width: 62.5rem;
   margin: 0 auto;
+}
+
+.section-map {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.section-map h3 {
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+.section-map hr {
+  width: 1024px;
+  border: none;
+  border-top: 1px solid #999999;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+ul li:not(:last-child) {
+  margin-right: 100px;
+}
+ul a {
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
 }/*# sourceMappingURL=style.css.map */
