--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -61,6 +61,7 @@ header{
 }
 
 .section-description{
+    margin-bottom: 20px;
     .section-description__container{
         text-align: center;
         margin-bottom: 20px;
@@ -82,5 +83,38 @@ header{
             max-width: 62.5rem;
             margin: 0 auto;
         }
+    }
+}
+
+.section-map{
+    text-align: center;
+    margin-bottom: 20px;
+    h3{
+        text-align: center;
+        font-size: 36px;
+        margin-bottom: 20px;
+    }
+    hr{
+        width: 1024px;
+        border: none;
+        border-top: 1px solid #999999;
+        margin: 0 auto;
+        margin-bottom: 20px;
+    }
+}
+
+
+ul{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    li:not(:last-child){
+        margin-right: 100px;
+    }
+    a{
+        text-decoration: none;
+        color: black;
+        font-size: 18px;
     }
 }
